--- a/index.html
+++ b/index.html
@@ -8,28 +8,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Chicle&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top p-4">
         <div class="container">
-            <h1 class="navbar-brand">Mike Churras Bom</h1>
-            <nav>
-                <ul class="nav nav-pills">
+            <h1 class="navbar-brand m-0">Mike Churras Bom</h1>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-nav">
+                <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item">
-                        <a class="nav-link active" href="">Sobre</a>
+                        <a class="nav-link active" href="">
+                            <i class="bi bi-house-door me-2"></i>
+                            Sobre</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="">Eventos</a>
+                        <a class="nav-link" href="">
+                            <i class="bi bi-stopwatch me-2"></i>
+                            Horário de Funcionamento</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="">Nosso Cardápio</a>
+                        <a class="nav-link" href="">
+                            <i class="bi bi-card-list me-2"></i>
+                            Nosso Cardápio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="">Fale Conosco</a>
+                        <a class="nav-link" href="">
+                            <i class="bi bi-whatsapp me-2"></i>
+                            Fale Conosco</a>
                     </li>
                 </ul>
             </nav>
