--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top p-4">
+    <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0">Mike Churras Bom</h1>
+                <img src="imgs/logo.png" alt="logo" class="logo">
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-nav">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item">
-                        <a class="nav-link active" href="">
+                        <a class="nav-link" href="#sobre">
                             <i class="bi bi-house-door me-2"></i>
                             Sobre</a>
                     </li>
@@ -47,6 +47,85 @@
             </nav>
         </div>
     </header>
+
+<div class="" data-bs-spy="scroll" data-bs-target="#cabecalho">
+    <section id="sobre">
+        <div class="container">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-carne.jpg" alt="slide1" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-carne2.jpg" alt="slide2" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-coração.webp" alt="slide3" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-coração2.jpg" alt="slide4" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-linguiça.jpg" alt="slide5" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-linguiça2.jpg" alt="slide6" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-lombo.jpg" alt="slide7" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-lombo2.jpg" alt="slide8" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-sobrecoxa.webp" alt="slide9" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="imgs/espetinho-de-sobrecoxa2.webp" alt="slide10" class="d-block w-100">
+                    </div>
+                </div>
+                <button type="button" class="carousel-control-prev" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button type="button" class="carousel-control-next" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="5"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="6"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="7"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="8"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="9"></button>
+                </div>
+            </div>
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img class="d-block w-100 rounded" src="imgs/interior.png" alt="interior">
+                        </div>
+                        <div class="col-md-7">
+                            <h2 class="section-title">Nossa <span>História</span></h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iusto ducimus consequatur, molestiae itaque, fuga placeat veniam praesentium nobis sunt, quod officia delectus cumque omnis ipsam! Deserunt perferendis atque est.</p>
+                            <h3 class="section-title">Nosso <span>espaço</span></h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa at ea sunt nostrum repellendus quod. Tenetur molestiae impedit, perferendis itaque, voluptatibus exercitationem saepe culpa repudiandae quasi, vel nobis eum assumenda!</p>
+                            <ul>
+                                <li>Item 1</li>
+                                <li>Item 2</li>
+                                <li>Item 3</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
