--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="scrollspy" data-bs-spy="scroll" data-bs-target="#cabecalho" data-bs-offset="50">
     <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
                 <img src="imgs/logo.png" alt="logo" class="logo">
@@ -23,25 +23,29 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#sobre">
                             <i class="bi bi-house-door me-2"></i>
-                            Sobre</a>
+                            Sobre
+                        </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="#opcoes">
                             <i class="bi bi-emoji-heart-eyes"></i>
-                            Nossas opções</a>
+                            Nossas opções
+                        </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="#cardapio">
                             <i class="bi bi-card-list me-2"></i>
-                            Nosso Cardápio</a>
+                            Nosso Cardápio
+                        </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="#contato">
                             <i class="bi bi-whatsapp me-2"></i>
-                            Fale Conosco</a>
+                            Fale Conosco
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -332,51 +336,64 @@
     <section id="contato" class="pt-5 pb-5">
         <div class="container">
             <div class="row">
-                <h2 class="section-title text-center">Fale Conosco</h2>
+                <h2 class="section-title text-center fs-1">Fale <span>Conosco</span></h2>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
-                    <form action="" method="post" class="bg-light p-4 rounded">
+                <div class="col-md-7">
+                    <form method="post" class="bg-light p-4 rounded">
                         <div class="mb-3">
-                            <label for="nome" class="form-label">Nome</label>
+                            <label for="nome" class="form-label fw-bold text-colored">Nome</label>
                             <input type="text" class="form-control" id="nome" name="nome" required>
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
+                            <label for="email" class="form-label fw-bold text-colored">Email</label>
                             <input type="email" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="mb-3">
-                            <label for="telefone" class="form-label">Telefone</label>
-                            <input type="tel" class="form-control" id="telefone" name="telefone" required>
+                            <label for="telefone" class="form-label fw-bold text-colored">Telefone</label>
+                            <input type="tel" class="form-control" id="telefone" name="telefone">
                         </div>
                         <div class="mb-3">
-                            <label for="mensagem" class="form-label">Mensagem</label>
+                            <label for="mensagem" class="form-label fw-bold text-colored">Mensagem</label>
                             <textarea class="form-control" id="mensagem" name="mensagem" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="btn btn-dark">Enviar</button>
+                        <button type="submit" class="btn btn-dark fw-bold">Enviar</button>
                     </form>
                 </div>
-                <div class="col-md-6">
-                    <img src="imgs/logo.png" alt="Contato" class="d-block rounded mb-2 img-fluid justify-content-center" id="contato-img">
+                <div class="col-md-5">
+                    <div class="row">
+                        <h3 class="section-title fs-2"><span><i class="bi bi-hand-thumbs-up-fill"></i></span> Redes <span>Sociais</span></h3>
+                        <ul class="list-unstyled d-flex">
+                            <li class="fs-1 p-2">
+                                <a href="#">
+                                    <i class="bi bi-facebook text-colored"></i>
+                                </a>
+                            </li>
+
+                            <li class="fs-1 p-2">
+                                <a href="#">
+                                    <i class="bi bi-instagram text-colored"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <h3 class="section-title fs-2"><span><i class="bi bi-cursor-fill"></i></span> Nosso <span>endereço</span></h3>
+                        <p class="text-dark">Rua dos Espetinhos, 123 - São Paulo - SP</p>
+                    </div>
+                </div>
+            </div>
 
     </section>
 
 
-    <footer class="text-white pt-5 pb-5" id="rodape">
+    <footer class="text-white pt-5" id="rodape">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-3">
                     <h3 class="section-title text-dark">Contato</h3>
                     <p><i class="bi bi-whatsapp"></i> (11) 99999-9999</p>
                     <p><i class="bi bi-envelope"></i> mikechurrasbom@gmail.com</p>
-                    <p><i class="bi bi-geo-alt"></i> Rua dos Espetinhos, 123 - São Paulo - SP</p>
                 </div>
-                <div class="col-md-3">
-                    <h3 class="section-title text-dark">Redes Sociais</h3>
-                    <p><i class="bi bi-facebook"></i> facebook.com/mikechurrasbom</p>
-                    <p><i class="bi bi-instagram"></i> instagram.com/mikechurrasbom</p>
-                    <p><i class="bi bi-twitter"></i> twitter.com/mikechurrasbom</p>
-                </div>
+
                 <div class="col-md-3">
                     <h3 class="section-title text-dark">Horário de Funcionamento</h3>
                     <p><i class="bi bi-clock"></i> Segunda a Sexta: 18h - 23h</p>
